v1.6.7 - Copy and paste between Turing machines with the same number of tapes now works correctly.
Still need to handle copy and paste between Turing Machines with different numbers of tapes more gracefully.